增加rime版本，更新转换脚本

--- a/fcitx/wubi86_norman.conf
+++ b/fcitx/wubi86_norman.conf
@@ -1,20 +1,20 @@
 [CodeTable]
 # Unique Name for Table
-UniqueName=wubi-norman
+UniqueName=wubi86-norman
 # Code Table Name
-Name=Wubin
-Name[ca]=Wubi-Norman
-Name[da]=Wubi-Norman
-Name[de]=Wubi-Norman
-Name[ja]=Wubi-Norman
-Name[ko]=Wubi-Norman
+Name=Wubi86-Norman
+Name[ca]=Wubi86-Norman
+Name[da]=Wubi86-Norman
+Name[de]=Wubi86-Norman
+Name[ja]=Wubi86-Norman
+Name[ko]=Wubi86-Norman
 Name[ru]=Убиn (Wubi-Norman)
-Name[zh_CN]=五笔字型-Norman
-Name[zh_TW]=五筆字型-Norman
+Name[zh_CN]=五笔86-Norman
+Name[zh_TW]=五筆86-Norman
 # Icon Name
-IconName=wubi
+IconName=wubin
 # Code Table File
-File=wbn.mb
+File=wubi_norman.mb
 # Adjust Order
 # Available Value:
 # AdjustNo
